--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       transform: translateY(-2px);
     }
   </style>
+
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/atom-one-dark.min.css">
+  
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
@@ -54,6 +59,7 @@
     </div>
   </div>
   <script src="./index.js"></script>
+  <script src="./ai-assistant.js"></script>
 </body>
 
 </html>
